--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -3,4 +3,8 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="jp.unknown.works.twinown.TimelineFragment">
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/timeline_view"/>
 </FrameLayout>
