--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:fab="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="?attr/base_color_1">
@@ -11,4 +12,30 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:background="?attr/base_color_2"/>
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/timelineFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        fab:fab_addButtonColorNormal="?attr/accent_color_2"
+        fab:fab_addButtonColorPressed="?attr/accent_color_2"
+        fab:fab_labelStyle="?attr/fabLabelStyle">
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/action_a"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="?attr/accent_color_1"
+            fab:fab_colorPressed="?attr/accent_color_1"
+            fab:fab_title="Action A"/>
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/action_b"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:fab_colorNormal="?attr/accent_color_1"
+            fab:fab_colorPressed="?attr/accent_color_1"
+            fab:fab_title="Action B"/>
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 </RelativeLayout>
