--- a/app/src/main/res/layout/status.xml
+++ b/app/src/main/res/layout/status.xml
@@ -2,6 +2,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:id="@+id/itemView"
               android:paddingTop="@dimen/status_horizontal_margin"
               android:paddingBottom="@dimen/status_horizontal_margin"
               android:clickable="true"
