--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="status_horizontal_margin">4dp</dimen>
+    <dimen name="menu_horizontal_margin">8dp</dimen>
+    <dimen name="menu_icon_margin">8dp</dimen>
     <dimen name="icon_size">48dp</dimen>
 </resources>
