--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -2,6 +2,6 @@
           xmlns:tools="http://schemas.android.com/tools"
           android:id="@+id/fragment"
           android:name="jp.unknown.works.twinown.SettingActivity$SettingActivityFragment"
-          tools:layout="@layout/fragment_setting"
+          tools:layout="@android:layout/list_content"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
