--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,60 +1,79 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:fab="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:fab="http://schemas.android.com/apk/res-auto"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:background="?attr/base_color_1"
-                    android:layout_weight="1">
-        <android.support.v4.view.ViewPager
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/timelinePager"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:background="?attr/base_color_2"/>
-        <com.getbase.floatingactionbutton.FloatingActionsMenu
-            android:id="@+id/timelineFab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            fab:fab_addButtonColorNormal="?attr/accent_color_2"
-            fab:fab_addButtonColorPressed="?attr/accent_color_2"
-            fab:fab_labelStyle="?attr/fabLabelStyle"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true">
-            <com.getbase.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab_setting"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                fab:fab_colorNormal="?attr/accent_color_1"
-                fab:fab_colorPressed="?attr/accent_color_1"
-                fab:fab_title="Setting"/>
-        </com.getbase.floatingactionbutton.FloatingActionsMenu>
-    </RelativeLayout>
-    <RelativeLayout android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-        <android.support.design.widget.TextInputLayout
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/mainDrawerLayout">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:fab="http://schemas.android.com/apk/res-auto"
+                  android:orientation="vertical"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent">
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/tweetButton">
-            <EditText android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:id="@+id/tweetEditText"
-                      android:hint="@string/tweet_hint"
-                      android:layout_toStartOf="@+id/tweetButton"/>
-        </android.support.design.widget.TextInputLayout>
-        <ImageButton android:layout_width="wrap_content"
-                     android:layout_height="wrap_content"
-                     android:id="@+id/tweetButton"
-                     android:src="@drawable/ic_send_white"
-                     android:contentDescription="@string/tweet"
-                     android:layout_centerVertical="true"
-                     android:layout_alignParentEnd="true"/>
-    </RelativeLayout>
-</LinearLayout>
+            android:background="?attr/colorPrimary"/>
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                        xmlns:fab="http://schemas.android.com/apk/res-auto"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:background="?attr/base_color_1"
+                        android:layout_weight="1">
+            <android.support.v4.view.ViewPager
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/timelinePager"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:background="?attr/base_color_2"/>
+            <com.getbase.floatingactionbutton.FloatingActionsMenu
+                android:id="@+id/timelineFab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                fab:fab_addButtonColorNormal="?attr/accent_color_2"
+                fab:fab_addButtonColorPressed="?attr/accent_color_2"
+                fab:fab_labelStyle="?attr/fabLabelStyle"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true">
+                <com.getbase.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fab_setting"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    fab:fab_colorNormal="?attr/accent_color_1"
+                    fab:fab_colorPressed="?attr/accent_color_1"
+                    fab:fab_title="Setting"/>
+            </com.getbase.floatingactionbutton.FloatingActionsMenu>
+        </RelativeLayout>
+        <RelativeLayout android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toStartOf="@+id/tweetButton">
+                <EditText android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:id="@+id/tweetEditText"
+                          android:hint="@string/tweet_hint"
+                          android:layout_toStartOf="@+id/tweetButton"/>
+            </android.support.design.widget.TextInputLayout>
+            <ImageButton android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:id="@+id/tweetButton"
+                         android:src="@drawable/ic_send_white"
+                         android:contentDescription="@string/tweet"
+                         android:layout_centerVertical="true"
+                         android:layout_alignParentEnd="true"/>
+        </RelativeLayout>
+    </LinearLayout>
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:id="@+id/mainNavigation"
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/menu_main"/>
+</android.support.v4.widget.DrawerLayout>
