--- a/app/src/main/res/values/style_dark.xml
+++ b/app/src/main/res/values/style_dark.xml
@@ -1,5 +1,7 @@
 <resources>
-    <style name="AppThemeDark" parent="Theme.AppCompat">
+    <style name="AppThemeDark" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimaryDark">@color/primary_dark_material_dark</item>
+        <item name="colorPrimary">@color/primary_material_dark</item>
         <item name="fabLabelStyle">@style/menu_labels_style_black</item>
         <item name="base_color_1">#666666</item>
         <item name="base_color_2">#303030</item>
