added toolbar shadow

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,6 +13,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:elevation="5dp"
             android:background="?attr/colorPrimary"/>
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         xmlns:fab="http://schemas.android.com/apk/res-auto"
