--- a/app/src/main/res/values/style_dark.xml
+++ b/app/src/main/res/values/style_dark.xml
@@ -6,7 +6,7 @@
         <item name="base_color_1">#666666</item>
         <item name="base_color_2">#303030</item>
         <item name="impact_color">#00D6B7</item>
-        <item name="accent_color_1">#D94079</item>
-        <item name="accent_color_2">#E3E3E3</item>
+        <item name="accent_color_1">#AAD94079</item>
+        <item name="accent_color_2">#AAE3E3E3</item>
     </style>
 </resources>
