--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -14,5 +14,6 @@
               android:name="jp.unknown.works.twinown.AuthActivity$AuthActivityFragment"
               tools:layout="@layout/fragment_auth"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"/>
+              android:layout_height="match_parent"
+              android:layout_below="@+id/toolbar"/>
 </RelativeLayout>
