--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,7 +8,8 @@
                   xmlns:fab="http://schemas.android.com/apk/res-auto"
                   android:orientation="vertical"
                   android:layout_width="match_parent"
-                  android:layout_height="match_parent">
+                  android:layout_height="match_parent"
+                  android:background="?attr/base_color_2">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -19,7 +20,6 @@
                         xmlns:fab="http://schemas.android.com/apk/res-auto"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
-                        android:background="?attr/base_color_1"
                         android:layout_weight="1">
             <android.support.v4.view.ViewPager
                 android:layout_width="wrap_content"
@@ -27,8 +27,7 @@
                 android:id="@+id/timelinePager"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:background="?attr/base_color_2"/>
+                android:layout_alignParentEnd="true"/>
             <com.getbase.floatingactionbutton.FloatingActionsMenu
                 android:id="@+id/timelineFab"
                 android:layout_width="wrap_content"
