--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -3,8 +3,13 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="jp.unknown.works.twinown.twinown_views.TimelineFragment">
-    <android.support.v7.widget.RecyclerView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/timelineView"/>
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/timelineView"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
