added toggle quick post

--- a/app/src/main/res/anim/out_animation.xml
+++ b/app/src/main/res/anim/out_animation.xml
@@ -3,6 +3,6 @@
     android:duration="500"
     android:fillAfter="false"
     android:fromXDelta="0"
-    android:fromYDelta="100%p"
+    android:fromYDelta="0"
     android:toXDelta="0"
-    android:toYDelta="0" />
+    android:toYDelta="100%p" />
