--- a/app/src/main/res/layout/status.xml
+++ b/app/src/main/res/layout/status.xml
@@ -19,13 +19,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingRight="0dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/app_name"
         android:id="@+id/statusNameView"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/statusIconView"/>
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleX="0.9"
+        android:scaleY="0.9"
+        android:alpha="0.7"
+        android:gravity="center"
+        android:paddingLeft="0dp"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/app_name"
+        android:textStyle="bold"
+        android:id="@+id/statusScreenNameView"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/statusNameView"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,5 +49,21 @@
         android:text="@string/app_name"
         android:id="@+id/statusTextView"
         android:layout_below="@+id/statusNameView"
+        android:layout_toEndOf="@+id/statusIconView"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleX="0.9"
+        android:scaleY="0.9"
+        android:alpha="0.7"
+        android:gravity="center"
+        android:visibility="gone"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/app_name"
+        android:textStyle="bold"
+        android:id="@+id/statusRetweetedScreenName"
+        android:layout_below="@+id/statusTextView"
         android:layout_toEndOf="@+id/statusIconView"/>
 </RelativeLayout>
