--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="menu_horizontal_margin">8dp</dimen>
     <dimen name="menu_icon_margin">8dp</dimen>
     <dimen name="icon_size">48dp</dimen>
+
+    <dimen name="user_page_margin">16dp</dimen>
+
 </resources>
