--- a/app/src/main/res/layout/activity_tweet.xml
+++ b/app/src/main/res/layout/activity_tweet.xml
@@ -6,7 +6,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context="jp.unknown.works.twinown.twinown_views.UserActivity">
+                tools:context="jp.unknown.works.twinown.TweetActivity">
     <FrameLayout android:id="@+id/fragment"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"/>
