--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -17,6 +17,14 @@
             <RelativeLayout android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                 <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:alpha="0.5"
+                    android:layout_centerHorizontal="true"
+                    android:layout_margin="@dimen/user_page_margin"
+                    android:id="@+id/userBannerView"
+                    android:contentDescription="@android:string/untitled"/>
+                <ImageView
                     android:layout_width="@dimen/icon_size"
                     android:layout_height="@dimen/icon_size"
                     android:layout_centerHorizontal="true"
