--- a/app/src/main/res/layout/status.xml
+++ b/app/src/main/res/layout/status.xml
@@ -18,6 +18,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="0dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -28,6 +30,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:scaleX="0.9"
         android:scaleY="0.9"
         android:alpha="0.7"
@@ -53,6 +57,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:scaleX="0.9"
         android:scaleY="0.9"
         android:alpha="0.7"
