--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,5 +1,15 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:background="@color/primary_dark_material_light" />
+    android:layout_height="180dp"
+    android:id="@+id/drawerHeader"
+    android:background="@color/primary_dark_material_light" >
+    <ImageView
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:id="@+id/userIconView"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@android:string/untitled"/>
+</RelativeLayout>
