--- a/app/src/main/res/layout/status.xml
+++ b/app/src/main/res/layout/status.xml
@@ -11,7 +11,8 @@
     <ImageView
         android:layout_width="@dimen/icon_size"
         android:layout_height="@dimen/icon_size"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/icon_vertical_margin"
+        android:layout_marginRight="@dimen/icon_vertical_margin"
         android:id="@+id/statusIconView"
         android:contentDescription="@android:string/untitled"/>
 
@@ -20,8 +21,8 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:singleLine="true"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="0dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="@dimen/status_text_vertical_margin"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/app_name"
         android:id="@+id/statusNameView"
@@ -37,7 +38,7 @@
         android:alpha="0.7"
         android:gravity="center"
         android:paddingLeft="0dp"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/status_text_vertical_margin"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/app_name"
         android:textStyle="bold"
@@ -45,10 +46,10 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/statusNameView"/>
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="0dp"
+        android:paddingRight="@dimen/status_text_vertical_margin"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/app_name"
         android:id="@+id/statusTextView"
@@ -64,8 +65,8 @@
         android:alpha="0.7"
         android:gravity="center"
         android:visibility="gone"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/status_text_vertical_margin"
+        android:paddingRight="@dimen/status_text_vertical_margin"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/app_name"
         android:textStyle="bold"
