--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -43,7 +43,7 @@
                           android:layout_toStartOf="@+id/tweetButton"/>
             </android.support.design.widget.TextInputLayout>
             <ImageButton android:layout_width="wrap_content"
-                         android:layout_height="48dp"
+                         android:layout_height="wrap_content"
                          android:id="@+id/tweetButton"
                          android:src="@drawable/ic_send_white"
                          android:contentDescription="@string/tweet"
