--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,10 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="status_horizontal_margin">4dp</dimen>
     <dimen name="menu_horizontal_margin">8dp</dimen>
     <dimen name="menu_icon_margin">8dp</dimen>
+
+    <dimen name="status_horizontal_margin">4dp</dimen>
     <dimen name="icon_size">48dp</dimen>
+    <dimen name="icon_vertical_margin">8dp</dimen>
+    <dimen name="status_text_vertical_margin">8dp</dimen>
 
     <dimen name="user_page_margin">16dp</dimen>
 
