--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,15 +1,34 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="150dp"
+    android:alpha="0.9"
     android:id="@+id/drawerHeader"
-    android:background="@color/primary_dark_material_light" >
+    android:background="@color/primary_dark_material_light">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.5"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/userBannerView"
+        android:contentDescription="@android:string/untitled"/>
     <ImageView
         android:layout_width="@dimen/icon_size"
         android:layout_height="@dimen/icon_size"
-        android:layout_margin="@dimen/activity_horizontal_margin"
         android:id="@+id/userIconView"
+        android:contentDescription="@android:string/untitled"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/headerSpinner"/>
+    <android.support.v7.widget.AppCompatSpinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/headerSpinner"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:contentDescription="@android:string/untitled"/>
+        android:layout_alignParentStart="true"
+        android:background="?attr/android:colorBackground"
+        android:alpha="0.5"/>
 </RelativeLayout>
