--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -49,7 +49,7 @@
                          android:contentDescription="@string/tweet"
                          android:layout_centerVertical="true"
                          android:layout_alignParentEnd="true"
-                         android:layout_gravity="center"/>
+                         android:layout_gravity="bottom"/>
         </RelativeLayout>
     </LinearLayout>
     <android.support.design.widget.NavigationView
