--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -29,6 +29,6 @@
         android:id="@+id/headerSpinner"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:background="?attr/android:colorBackground"
-        android:alpha="0.5"/>
+        android:background="@drawable/abc_spinner_mtrl_am_alpha"
+        android:alpha="0.8"/>
 </RelativeLayout>
