--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,6 +7,7 @@
     <LinearLayout android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
+                  android:id="@+id/mainLinearLayout"
                   android:background="?attr/base_color_2"
                   android:animateLayoutChanges="true">
         <android.support.v7.widget.Toolbar
@@ -15,6 +16,11 @@
             android:layout_height="wrap_content"
             android:elevation="5dp"
             android:background="?attr/colorPrimary"/>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
@@ -29,7 +35,7 @@
         </RelativeLayout>
         <RelativeLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/quick_post_view"
+                        android:id="@+id/quickPostView"
                         android:visibility="gone">
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
