--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -64,5 +64,15 @@
         android:layout_gravity="start"
         android:id="@+id/mainNavigation"
         app:headerLayout="@layout/drawer_header"
-        app:menu="@menu/menu_main"/>
+        app:menu="@menu/menu_main_navi"/>
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:id="@+id/activityNavigation">
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/twitterActivityRecyclerView"/>
+    </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
