--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -33,30 +33,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"/>
         </RelativeLayout>
-        <RelativeLayout android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/quickPostView"
-                        android:visibility="gone">
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/tweetTextInputLayout"
-                android:layout_toStartOf="@+id/tweetButton">
-                <EditText android:layout_width="match_parent"
-                          android:layout_height="wrap_content"
-                          android:id="@+id/tweetEditText"
-                          android:hint="@string/tweet_hint"
-                          android:layout_toStartOf="@+id/tweetButton"/>
-            </android.support.design.widget.TextInputLayout>
-            <ImageButton android:layout_width="wrap_content"
-                         android:layout_height="wrap_content"
-                         android:id="@+id/tweetButton"
-                         android:src="@drawable/ic_send_white"
-                         android:contentDescription="@string/tweet"
-                         android:layout_centerVertical="true"
-                         android:layout_alignParentEnd="true"
-                         android:layout_gravity="bottom"/>
-        </RelativeLayout>
+        <include layout="@layout/quick_post"/>
     </LinearLayout>
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
